# q2mysql55_win_local

./: .gitignore  README.md  build.ps1  dev.py  dev2.py  pyproject.toml  test-build.ps1
q2mysql55_win_local/: server.py
tests/: test.py
