[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q2mysql55_win_local"
version = "0.1.6"
description = "Local MySQL 5.5 server"
readme = "README.md"
authors = [
    { name = "Andrei Puchko" }
]
requires-python = ">=3.9"
dependencies = ["psutil"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["q2mysql55_win_local"]
exclude = ["tests"]

# binary files
[tool.setuptools.package-data]
q2mysql55_win_local = ["mysql55_files/*.*/*.*/*.*", "mysql55_files/share/*"]

[tool.ruff]
line-length = 110
